<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">MadeInBrasil</string>
    <string name="string_home">Home</string>
    <string name="string_films">Filmes</string>
    <string name="string_lists">Listas</string>
    <string name="string_series">Séries</string>
    <string name="string_password">Senha</string>
    <string name="string_register">Cadastar</string>
    <string name="string_name">Nome</string>
    <string name="string_email">Email</string>
    <string name="string_confirm_password">Confirmar Senha</string>
    <string name="string_select_gender">Selecione seus gêneros preferidos</string>
    <string name="string_drama">Drama</string>
    <string name="string_comedy">Comédia</string>
    <string name="string_action">Ação</string>
    <string name="string_doc">Documentário</string>
    <string name="string_syfi">Ficção</string>
    <string name="string_horror">Terror</string>
    <string name="string_suspense">Suspense</string>
    <string name="string_adventure">Aventura</string>
    <string name="string_animation">Animação</string>
    <string name="string_family">Família</string>
    <string name="string_music">Música</string>
    <string name="string_fantasy">Fantasia</string>
    <string name="string_war">Guerra</string>
    <string name="string_mistery">Mistério</string>
    <string name="string_tvmovies">Cinema TV</string>
    <string name="string_history">História</string>
    <string name="string_crime">Crime</string>
    <string name="string_thriller">Thriller</string>

    <string name="errorMessage">O campo %1$s é obrigatório</string>
    <string name="validationEmail">O email deve ser válido</string>
    <string name="validationPassword">A senha deve ter ao menos 6 caracteres</string>
    <string name="validationName">O nome deve ter ao menos 2 caracteres</string>

    <string name="name_hint">Nome</string>
    <string name="achievement_title">Conquistas</string>

    <string-array name="spinner_options">
        <item>Todos</item>
        <item>Filmes</item>
        <item>Séries</item>
    </string-array>

    <string name="string_search">Buscar</string>
    <string name="string_button_watched">Assistido</string>
    <string name="string_trailer">Trailer</string>
    <string name="string_description_title">Sinopse</string>
    <string name="string_cast">Elenco</string>
    <string name="string_comment">Comentários</string>
    <string name="string_comment_input">Adicione um comentário</string>
    <string name="string_post_comment">Postar</string>
    <string name="string_my_lists">Minhas Listas</string>
    <string name="string_watched">Assistidos</string>
    <string name="string_favorites">Favoritos</string>
    <string name="string_new_list">Nova Lista</string>
    <string name="string_anam">/@AnaMartins</string>
    <string name="string_add_film">Adicionar filme</string>
    <string name="string_add_serie">Adicionar série</string>
    <string name="string_create_list_page_title">Crie sua lista</string>
    <string name="string_description_hint">Descrição</string>
    <string name="string_create_list_button">Criar lista</string>
    <string name="string_update_list_button">Atualizar lista</string>
    <string name="string_friends">Amigos</string>
    <string name="string_ask_friend">Pesquisar algum Amigo</string>
    <string name="string_logIn">Entrar</string>
    <string name="string_button_register">Não tem conta? Cadastro</string>
    <string name="string_continue_gender">Continuar</string>
    <string name="string_conquers">Conquistas</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="filmes_para_voce">Filmes para Você</string>
    <string name="series_para_voce">Séries para Você</string>
    <string name="desc_logo_madeinbrasil">Logo MadeInBrasil</string>
    <string name="encerrar_sessao">Encerrar sessão</string>
    <string name="musical">Musical</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_seasons">Temporadas</string>
    <string name="string_streaming">Streaming</string>

    <string name="facebook_app_id">406621940578073</string>
    <string name="fb_login_protocol_scheme">fb406621940578073</string>
    <!--    <string name="facebook_app_id" translatable="false">4209544899075330</string>-->
    <!--    <string name="fb_login_protocol_scheme" translatable="false">fb4209544899075330</string>-->

    <string name="string_recomendation_not_found">Recomendações não encontradas</string>
    <string name="string_similars_not_found">Similares não encontrados</string>
    <string name="string_similars">Similares</string>
    <string name="string_recomendations">Recomendações</string>
    <string name="string_romance">Romance</string>
    <string name="string_faroeste">Faroeste</string>
    <string name="string_watched_tutorial_description">Clicando nesse botão, você adicionará este filme ou série a sua lista de assistidos!</string>
    <string name="string_watched_tutorial_title">Assistidos</string>
    <string name="string_favorite_tutorial_title">Favoritos</string>
    <string name="string_favorite_tutorial_description">Clicando nesse botão, você adicionará este filme ou série a sua lista de favoritos!</string>
    <string name="string_list_tutorial_title">Adicionar a uma lista</string>
    <string name="string_list_tutorial_description">Clicando nesse botão, você adicionará este filme ou série a uma lista que você criou de sua escolha!</string>
    <string name="string_streamming_tutorial_title">Streamming</string>
    <string name="string_streamming_tutorial_description">Caso esse botão apareça, significa que ao clicar nele você será redirecionado a um site que mostrará em qual portal de Stream esse filme está disponível!</string>
    <string name="string_seasons_tutorial_title">Temporadas</string>
    <string name="string_seasons_tutorial_description">No caso das séries, você poderá ver alguns detalhes das temporadas que a mesma possui!</string>
    <string name="string_stream_tutorial_title">Acesso direto</string>
    <string name="string_stream_tutorial_description">\"Caso esse botão apareça, significa que ao clicar nele você será redirecionado diretamente para a Stream que esse filem ou série está disponível!"</string>
    <string name="string_cast_tutorial_title">Cartões do Elenco</string>
    <string name="string_cast_tutorial_description">Clique no cartão de um ator ou atriz para ver as suas obras e a sua descrição!</string>
    <string name="string_back_tutotial_title">Retornar</string>
    <string name="string_back_tutorial_description">Ao clicar nessa setinha, você irá para a página anterior!</string>
    <string name="string_welcome_tutorial_title">Bem-vindo(a) ao Made In Brasil</string>
    <string name="string_welcome_tutorial_description">Esse será um tutorial rápido explicando o passo a passo de como usar ao máximo este App.</string>
    <string name="string_cards_tutorial_title">Cartões de Filmes e Séries</string>
    <string name="string_cards_tutorial_description">Com apenas um clique nesses cartões você poderá ter acesso a descrição completa do seu filme ou série de interesse e caso queira apenas dar uma olhadinha rápida, basta clicar e segurar para abrir uma tela rápida</string>
    <string name="string_search_tutorial_title">Pesquise um filme ou série</string>
    <string name="string_search_tutorial_description">Aqui você poderá pesquisar qualquer filme ou série pelo nome!</string>
    <string name="string_profile_tutorial_title">Perfil</string>
    <string name="string_profile_tutotial_description">Clicando nesse botão, você terá acesso ao seu perfil</string>
    <string name="string_edit_tutorial_title">Edição</string>
    <string name="string_edit_tutorial_description">Aqui você poderá editar o seu perfil da maneira que mais gostar!</string>
    <string name="string_friends_tutorial_title">Meus Amigos</string>
    <string name="string_friends_tutorial_description">Clicando aqui, você terá acesso aos seus amigos!</string>
    <string name="string_my_favorites_tutorial_title">Meus Favoritos</string>
    <string name="string_my_favorites_tutorial_description">Aqui será listado todos os seus filmes favoritos e você pode clicar para ver uma lista mais completa</string>
    <string name="string_my_lists_tutorial_title">Minhas listas</string>
    <string name="string_my_lists_tutorial_description">Clicando aqui, você terá acesso as suas listas!</string>
    <string name="created_list_success">Lista criada com sucesso!</string>
    <string name="label_vazia">Vazia</string>
    <string name="delete_icon_description">Delete icon</string>
    <string name="edit_icon_description">Edit icon</string>
    <string name="sem_descricao_label">Nenhuma descrição</string>
    <string name="sem_itens_label">Sem itens</string>
    <string name="Nenhuma_lista_criada_label">Nenhuma lista criada ainda.</string>
    <string name="Criar_nova_lista">Crie uma nova lista para adicionar.</string>
    <string name="string_cast_not_found">Elenco não encontrado</string>
    <string name="string_login_with_google">Entrar com o Google</string>
    <string name="string_login_with_facebook">Entrar com o Facebook</string>
    <string name="string_go_to_favorites">Ir para os Favoritos</string>
    <string name="string_go_to_lists">Ir para as Listas</string>
    <string name="add_new_list_description">Add new List</string>
    <string name="futuros_lan_amentos">Futuros Lançamentos</string>
    <string name="selecione_a_lista_label">Selecione a lista:</string>
    <string name="cancelar_label">CANCELAR</string>
    <string name="adicionar_label">Adicionar</string>
    <string name="sair_label">sair</string>
    <string name="string_gender_not_found">Não encontrado</string>
    <string name="string_you_are_offline">Você está offline</string>
    <string name="nenhuma_lista_criada_no_momento">Nenhuma lista criada no momento.</string>
    <string name="search_lists_placeholder">Pesquisar listas</string>

</resources>