<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.activity.LogInActivity">

        <ImageView
            android:id="@+id/ivArrowBackLogin"
            style="@style/ArrowBackDefault"
            android:src="@drawable/ic_baseline_arrow_back_ios_20"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvLoginTitleLogin"/>

        <TextView
            android:id="@+id/tvLoginTitleLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@+id/ivArrowBackLogin"
            app:layout_constraintTop_toBottomOf="@+id/ivArrowBackLogin"
            app:layout_constraintBottom_toTopOf="@id/tilLoginEmail"
            android:text="@string/string_logIn"
            android:textColor="@color/colorAccent"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLoginTitleLogin"
            app:layout_constraintBottom_toTopOf="@id/tilLoginPassword"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/string_email"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietLoginEmail"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:tag="@string/string_email"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/tilLoginEmail"
            app:layout_constraintEnd_toEndOf="@+id/tilLoginEmail"
            app:layout_constraintTop_toBottomOf="@+id/tilLoginEmail"
            app:layout_constraintBottom_toTopOf="@id/btGoogleLogin"
            android:hint="@string/string_password"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietLoginPassword"
                android:textColor="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:tag="@string/string_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btGoogleLogin"
            style="@style/ButtonSocialFragment"
            android:drawableStart="@drawable/google"
            android:text="@string/string_login_with_google"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@id/tilLoginEmail"
            app:layout_constraintTop_toBottomOf="@id/tilLoginPassword"
            app:layout_constraintBottom_toTopOf="@id/btFaceLogin"
            />

        <Button
            android:id="@+id/btFaceLogin"
            style="@style/ButtonSocialFragment"
            android:drawableStart="@drawable/facebook"
            android:text="@string/string_login_with_facebook"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="@id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@id/tilLoginEmail"
            app:layout_constraintTop_toBottomOf="@id/btGoogleLogin"
            app:layout_constraintBottom_toTopOf="@id/btSaveLogin"/>

        <Button
            android:id="@+id/btSaveLogin"
            style="@style/ButtonWatchedFragment"
            android:enabled="false"
            android:text="@string/string_logIn"
            app:layout_constraintEnd_toEndOf="@+id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@+id/ivArrowBackLogin"
            app:layout_constraintTop_toBottomOf="@id/btFaceLogin"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>